# source-verification-service

./: .gitignore  Containerfile  Dockerfile.glibc-rootfs  Makefile  UsingNautilus.md  attest_source.sh  expose_enclave.sh
move/enclave/sources/: enclave.move
move/source-verification/: Move.toml  README.md
move/source-verification/sources/: source_verification.move
scripts/: patch-sui-localnet.sh  test-localnet-e2e.sh
src/nautilus-server/: Cargo.toml  run.sh
src/nautilus-server/src/: common.rs  lib.rs  main.rs
src/nautilus-server/src/apps/source-verification/: allowed_endpoints.yaml  mod.rs
tools/mock-nsm/: Cargo.toml  Dockerfile.build  mock-root-ca.pem
tools/mock-nsm/src/: certs.rs  ioctl.rs  main.rs
tools/nautilus-local/: Cargo.toml  Dockerfile.kernel  README.md  cuse.ko  e1000.ko  fuse.ko  mock-nsm-x86_64
tools/nautilus-local/src/: eif.rs  main.rs  overlay.rs  qemu.rs
tools/nautilus-local/src/attestation/: ca.rs  cbor.rs  cose.rs  mod.rs
