[package]
name = "mock-nsm"
version = "0.1.0"
edition = "2021"
description = "Mock NSM device for local Nautilus testing"
license = "Apache-2.0"

[[bin]]
name = "mock-nsm"
path = "src/main.rs"

[dependencies]
ciborium = "0.2"
serde_cbor = "0.11"
coset = "0.3"
p384 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["signing", "der"] }
sha2 = { version = "0.10", features = ["oid"] }
rand = "0.8"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
x509-cert = { version = "0.2", features = ["builder", "pem"] }
der = { version = "0.7", features = ["alloc", "derive", "pem"] }
spki = "0.7"
