[package]
name = "nautilus-local"
version = "0.1.0"
edition = "2021"
description = "Local development runner for Nautilus enclaves"
license = "Apache-2.0"

[[bin]]
name = "nautilus-local"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
ciborium = "0.2"
coset = "0.3"
p384 = { version = "0.13", features = ["ecdsa", "sha384"] }
ecdsa = { version = "0.16", features = ["signing", "der"] }
x509-cert = { version = "0.2", features = ["builder"] }
der = { version = "0.7", features = ["alloc", "derive"] }
spki = "0.7"
sha2 = { version = "0.10", features = ["oid"] }
rand = "0.8"
flate2 = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"
libc = "0.2"
